// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Node> htmlProps applied to all elements 1`] = `
<g
  className="g"
  transform="translate(2, 1)"
>
  <circle
    className="circle"
    r={5}
  />
  <text
    className="text"
    dx={5.5}
    dy={5}
  >
    Test Node
  </text>
</g>
`;

exports[`<Node> renders circle correctly 1`] = `
<g
  className="test"
  transform="translate(2, 1)"
>
  <circle
    r={5}
  />
  <text
    dx={5.5}
    dy={5}
  >
    Test Node
  </text>
</g>
`;

exports[`<Node> renders circle correctly with custom radius 1`] = `
<g
  className="test"
  transform="translate(2, 1)"
>
  <circle
    r={10}
  />
  <text
    dx={10.5}
    dy={5}
  >
    Test Node
  </text>
</g>
`;

exports[`<Node> renders custom label correctly 1`] = `
<g
  className="test"
  transform="translate(2, 1)"
>
  <circle
    r={5}
  />
  <g
    transform="translate(5.5, 5)"
  >
    <circle
      r="5"
    />
  </g>
</g>
`;

exports[`<Node> renders image correctly 1`] = `
<g
  className="test"
  transform="translate(2, 1)"
>
  <image
    height={10}
    href="http://example.com"
    width={10}
    x={-5}
    y={-5}
  />
  <text
    dx={5.5}
    dy={5}
  >
    Test Node
  </text>
</g>
`;

exports[`<Node> renders image correctly with custom size 1`] = `
<g
  className="test"
  transform="translate(2, 1)"
>
  <image
    height={20}
    href="http://example.com"
    width={30}
    x={-15}
    y={-10}
  />
  <text
    dx={15.5}
    dy={5}
  >
    Test Node
  </text>
</g>
`;

exports[`<Node> renders rect correctly 1`] = `
<g
  className="test"
  transform="translate(2, 1)"
>
  <rect
    height={10}
    width={10}
    x={-5}
    y={-5}
  />
  <text
    dx={5.5}
    dy={5}
  >
    Test Node
  </text>
</g>
`;

exports[`<Node> renders rect correctly with custom size 1`] = `
<g
  className="test"
  transform="translate(2, 1)"
>
  <rect
    height={20}
    width={30}
    x={-15}
    y={-10}
  />
  <text
    dx={15.5}
    dy={5}
  >
    Test Node
  </text>
</g>
`;
